--- a/css/style.css
+++ b/css/style.css
@@ -80,11 +80,13 @@ footer {
     background-color: #283845;
     color: #fff;
     text-align: left;
-    padding-left: 335px;
+    padding-bottom: 8px;
+    padding-left: 0px;
     padding-top: 0px;
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 72px;
 }
 
 ul{
