--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ table {
 }
 
 footer {
-    background-color: #283845;
-    color: #fff;
+    background-color: #F2D492;
+    color: #000;
     text-align: left;
     padding-bottom: 8px;
     padding-left: 0px;
