--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,34 @@ div.panel {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+.dropdown-buttons {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    width: 100%;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  .panel {
+    display: none;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    overflow: hidden;
+    position:sticky;
+    z-index: 1;
+    top: 45px;
+    left: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    color: #000;
+    font-size: large;
+    padding-left: 10px;
+    padding-top: 10px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  }
+  
+ .dropdown-buttons:focus + .panel, .dropdown-buttons:active + .panel {
+    display: block;
+  }
