--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,8 @@ div.panel {
     object-fit: contain;
 }
 
-.desc {
-    padding: 15px;
-    text-align: center;
-  }
+.variation-img img:hover{
+    cursor: pointer;
+    transform: scale(1.2);     
+}
+
